// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Break Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 emotion-8 emotion-9"
      >
        Break block test
      </div>
      <div
        class="emotion-10 emotion-11"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-12"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-12"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render ImageRight 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="emotion-6 emotion-3"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 emotion-8 emotion-9"
      >
        Break block test
      </div>
      <div
        class="emotion-10 emotion-11"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-12"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-12"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render WithButton 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 emotion-8 emotion-9"
      >
        Break block test
      </div>
      <div
        class="emotion-10 emotion-11"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-12"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-12"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary emotion-16"
        href="https://example.com"
        tabindex="0"
        target="_blank"
      >
        Link Text
        <span
          class="MuiTouchRipple-root emotion-17"
        />
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 emotion-8 emotion-9"
      >
        Break block test
      </div>
      <div
        class="emotion-10 emotion-11"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-12"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-12"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="MuiTypography-root MuiTypography-h4 emotion-8 emotion-9"
      >
        Break block test
      </div>
      <div
        class="emotion-10 emotion-11"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-12"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-12"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render WithoutImage 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="MuiTypography-root MuiTypography-h2 emotion-4 emotion-5"
      >
        Break block test
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-10"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-11"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-11"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-10"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Break Block should render WithoutImageRight 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="MuiTypography-root MuiTypography-h2 emotion-4 emotion-5"
      >
        Break block test
      </div>
    </div>
    <div
      class="emotion-6 emotion-3"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-10"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </p>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-11"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </span>
            </span>
          </h4>
          <h4
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-11"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-length="0"
                data-slate-zero-width="n"
              >
                ﻿
                <br />
              </span>
            </span>
          </h4>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-10"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <strong
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </span>
                </strong>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <em
                data-slate-leaf="true"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </em>
            </span>
            <span
              data-slate-node="text"
            >
              <u
                data-slate-leaf="true"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                  </span>
                </em>
              </u>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
